# armor_recognition

./: .gitignore  CMakeLists.txt
inc/: angleSolver.hpp  armor_recog.hpp  letter_recog.hpp
model/: numberRecog.model
src/: angleSolver.cpp  arm_test.cpp  armor_recog.cpp  letter_recog.cpp  ml_test.cpp  test.cpp
